# spottr

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 03649e8c3c88_create_exercises_table.py  2fdcc079a0df_update_relationships_between_set_and_.py  9b51be05ed3b_add_workouts_sets.py  a5ca35bbb21b_add_pgvector_extension.py  bbd4c970a463_initial_schema.py
app/: db.py  main.py  models.py
app/api/controllers/: exercises.py  workouts.py
app/api/handlers/: exercises.py  workouts.py
app/api/repository/: exercises.py  workouts.py
app/controllers/: exercises.py  workouts.py
app/core/: config.py  db.py  models.py
app/engine/: coach.py  helpers.py  tools.py
app/enums/: coach.py  workouts.py
app/errors/: exercises.py
app/handlers/: exercises.py  workouts.py
app/openai/: client.py
app/repository/: exercises.py  workouts.py
app/schemas/: exercises.py  workouts.py
app/shared/enums/: exercises.py
app/shared/schemas/: exercises.py  workouts.py
app/tools/: metrics.py
tests/: test_exercises.py
tests/engine/: test_coach.py  test_metrics.py  test_tools.py
tests/tools/: test_metrics.py
